--- a/muk_web_theme/template/assets.xml
+++ b/muk_web_theme/template/assets.xml
@@ -41,6 +41,9 @@
 		<xpath expr="//link[last()]" position="after">
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/fonts.scss"/>
 		</xpath>
+		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_theme/static/src/js/core/search.js" />
+		</xpath>
 	</template>
 
 	<template id="assets_backend" name="Backend Assets" inherit_id="web.assets_backend">
