publish muk_web_theme - 12.0

--- a/muk_web_theme/views/res_config_settings_view.xml
+++ b/muk_web_theme/views/res_config_settings_view.xml
@@ -110,6 +110,31 @@
 	                    </div>
 	                </div>
 	            </div>
+                <h2 id="web_theme_extension_title">Backend Theme Extensions</h2>
+            	<div class="row mt16 o_settings_container" name="web_theme_extension">
+	                <div class="col-12 col-lg-6 o_setting_box">
+		                <div class="o_setting_left_pane">
+		                    <field name="module_muk_web_theme_branding"/>
+		                </div>
+		                <div class="o_setting_right_pane">
+		                    <label for="module_muk_web_theme_branding"/>
+		                    <div class="text-muted">
+		                        Customize the theme according to your needs
+		                    </div>
+		                </div>
+		            </div>
+					<div class="col-12 col-lg-6 o_setting_box">
+		                <div class="o_setting_left_pane">
+		                    <field name="module_muk_web_theme_website"/>
+		                </div>
+		                <div class="o_setting_right_pane">
+		                    <label for="module_muk_web_theme_website"/>
+		                    <div class="text-muted">
+		                        Add theme styled website navigation
+		                    </div>
+		                </div>
+		            </div>
+	            </div>
 	        </div>
 	    </field>
 	</record>
