--- a/muk_web_theme/views/res_config_settings_view.xml
+++ b/muk_web_theme/views/res_config_settings_view.xml
@@ -114,6 +114,17 @@
             	<div class="row mt16 o_settings_container" name="web_theme_extension">
 	                <div class="col-12 col-lg-6 o_setting_box">
 		                <div class="o_setting_left_pane">
+		                    <field name="module_muk_web_theme_mail"/>
+		                </div>
+		                <div class="o_setting_right_pane">
+		                    <label for="module_muk_web_theme_mail"/>
+		                    <div class="text-muted">
+		                        Optimizes the mail chatter for the theme
+		                    </div>
+		                </div>
+		            </div>
+	                <div class="col-12 col-lg-6 o_setting_box">
+		                <div class="o_setting_left_pane">
 		                    <field name="module_muk_web_theme_branding"/>
 		                </div>
 		                <div class="o_setting_right_pane">
@@ -131,6 +142,17 @@
 		                    <label for="module_muk_web_theme_website"/>
 		                    <div class="text-muted">
 		                        Add theme styled website navigation
+		                    </div>
+		                </div>
+		            </div>
+	                <div class="col-12 col-lg-6 o_setting_box">
+		                <div class="o_setting_left_pane">
+		                    <field name="module_muk_web_theme_mobile"/>
+		                </div>
+		                <div class="o_setting_right_pane">
+		                    <label for="module_muk_web_theme_mobile"/>
+		                    <div class="text-muted">
+		                        Allow Odoo to be used as a PWA app
 		                    </div>
 		                </div>
 		            </div>
