publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/form_view.scss
+++ b/muk_web_theme/static/src/scss/form_view.scss
@@ -121,6 +121,12 @@
                 display: none;
             }
         }
+        .o_cp_buttons {
+            width: 100%;
+            div, .o-kanban-button-new {
+                width: 100%;
+            }
+        }
 	}
 	@include media-breakpoint-down(xs) {
 	    .oe_button_box {
