publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/control_panel.scss
+++ b/muk_web_theme/static/src/scss/control_panel.scss
@@ -114,3 +114,18 @@
         }
     }
 }
+
+.o_modal_header {
+	.o_searchview, .o_pager {
+		display: inline-block;
+	}
+	.o_searchview {
+		padding: 0;
+		border: none;
+		button {
+    		background-color: $white;
+			border-color: $border-color;
+			color: $gray-600;
+		}
+	}
+}
