publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/form_view.scss
+++ b/muk_web_theme/static/src/scss/form_view.scss
@@ -53,16 +53,12 @@
         .oe_title {
             max-width: 100%;
             width: initial;
-            
-            span {
+            span.o_field_widget {
                 max-width: 100%;
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 overflow: hidden;
                 width: initial;
-            }
-            span:active {
-                white-space: normal;
             }
         }
         .o_notebook {
