publish muk_web_preview - 12.0

--- a/muk_web_preview/static/src/scss/image.scss
+++ b/muk_web_preview/static/src/scss/image.scss
@@ -20,7 +20,7 @@
 *
 **********************************************************************************/
 	
-.o_field_widget.o_field_image {
+.o_field_widget.o_field_image .mk_field_image_wrapper:not(.mk_no_preview) {
 	&:hover {
         cursor: zoom-in;
     }
