publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/appsbar.scss
+++ b/muk_web_theme/static/src/scss/appsbar.scss
@@ -119,3 +119,12 @@
 		padding-left: 0;
 	}
 }
+
+.o_fullscreen {
+	.mk_apps_sidebar_panel {
+		display: none;
+	}
+	.o_main {
+		padding-left: 0;
+	}
+}
