--- a/muk_web_theme/template/assets.xml
+++ b/muk_web_theme/template/assets.xml
@@ -58,6 +58,7 @@
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/apps.scss"/>
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/appsbar.scss"/>
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/control_panel.scss"/>
+            <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/search_view.scss"/>
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/list_view.scss"/>
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/kanban_view.scss"/>
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/form_view.scss"/>
