--- a/muk_web_theme/static/src/scss/form_view.scss
+++ b/muk_web_theme/static/src/scss/form_view.scss
@@ -21,6 +21,11 @@
 **********************************************************************************/
 
 .o_form_view {
+
+	 .o_form_label {
+         margin-bottom: 5px;
+     }
+
     .o_form_sheet_bg {
         background: $o-webclient-background-color;
         border-bottom: 1px solid gray('300');
