--- a/muk_web_theme/views/res_config_settings_view.xml
+++ b/muk_web_theme/views/res_config_settings_view.xml
@@ -55,6 +55,22 @@
 	                    <div class="o_setting_left_pane">
 	                    </div>
 	                    <div class="o_setting_right_pane">
+	                        <span class="o_form_label">Favicon</span>
+                            <span class="fa fa-lg fa-building-o" title="Values set here are company-specific." aria-label="Values set here are company-specific." groups="base.group_multi_company" role="img"/>
+                            <div class="text-muted">
+                                Set the favicon for the system
+                            </div>
+                            <div class="content-group">
+                                <div class="mt16 row">
+                                    <field name="theme_favicon_backend" widget="image" class="ml-4 oe_avatar" required="1"/>
+                                </div>
+                            </div>
+	                    </div>
+	                </div>
+	                <div class="col-12 col-lg-6 o_setting_box">
+	                    <div class="o_setting_left_pane">
+	                    </div>
+	                    <div class="o_setting_right_pane">
 	                        <span class="o_form_label">Theme Colors</span>
                             <div class="text-muted">
                                 Set the main theme colors
@@ -69,22 +85,6 @@
                                     <div class="w-100"></div>
                                 	<label for="theme_color_required" string="Required" class="col-3 o_light_label"/>
                                     <field name="theme_color_required" widget="color" class="oe_inline"/>
-                                </div>
-                            </div>
-	                    </div>
-	                </div>
-	                <div class="col-12 col-lg-6 o_setting_box">
-	                    <div class="o_setting_left_pane">
-	                    </div>
-	                    <div class="o_setting_right_pane">
-	                        <span class="o_form_label">Background Image</span>
-                            <span class="fa fa-lg fa-building-o" title="Values set here are company-specific." aria-label="Values set here are company-specific." groups="base.group_multi_company" role="img"/>
-                            <div class="text-muted">
-                                Set the background image for the apps menu
-                            </div>
-                            <div class="content-group">
-                                <div class="mt16 row">
-                                    <field name="theme_background_image" widget="image" class="ml-4" required="1"/>
                                 </div>
                             </div>
 	                    </div>
@@ -110,6 +110,22 @@
                                     <div class="w-100"></div>
                                 	<label for="theme_background_blend_mode" string="Apps Blend" class="col-3 o_light_label"/>
                                     <field name="theme_background_blend_mode" class="col-5"/>
+                                </div>
+                            </div>
+	                    </div>
+	                </div>
+	                <div class="col-12 col-lg-6 o_setting_box">
+	                    <div class="o_setting_left_pane">
+	                    </div>
+	                    <div class="o_setting_right_pane">
+	                        <span class="o_form_label">Background Image</span>
+                            <span class="fa fa-lg fa-building-o" title="Values set here are company-specific." aria-label="Values set here are company-specific." groups="base.group_multi_company" role="img"/>
+                            <div class="text-muted">
+                                Set the background image for the apps menu
+                            </div>
+                            <div class="content-group">
+                                <div class="mt16 row">
+                                    <field name="theme_background_image" widget="image" class="ml-4" required="1"/>
                                 </div>
                             </div>
 	                    </div>
