--- a/muk_web_theme/templates/webclient.xml
+++ b/muk_web_theme/templates/webclient.xml
@@ -1,27 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-
-    Copyright (c) 2017-today MuK IT GmbH.
-
-    This file is part of MuK Theme
-    (see https://mukit.at).
-
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU Lesser General Public License for more details.
-
-    You should have received a copy of the GNU Lesser General Public License
-    along with this program. If not, see <http://www.gnu.org/licenses/>.
-
-  -->
-  
 <odoo>
 	
 	<template id="webclient_bootstrap" name="Web Client" inherit_id="web.webclient_bootstrap">
@@ -33,8 +11,7 @@
         </xpath>
         <xpath expr="//t[@t-set='body_classname']" position="after">
         	<t t-set="body_sidebar_classname" t-value="'mk_sidebar_type_' + request.env.user.sidebar_type or 'small'"/>
-        	<t t-set="body_chatter_classname" t-value="'mk_chatter_position_' + request.env.user.chatter_position or 'sided'"/>
-            <t t-set="body_classname" t-value="'%s %s %s' % (body_classname, body_sidebar_classname, body_chatter_classname)"/>
+            <t t-set="body_classname" t-value="'%s %s' % (body_classname, body_sidebar_classname)"/>
         </xpath>
     </template>
 	
