--- a/muk_web_theme/static/src/core/pager/pager.scss
+++ b/muk_web_theme/static/src/core/pager/pager.scss
@@ -1,4 +1,4 @@
-**********************************************************************************
+/**********************************************************************************
 *
 *    Copyright (c) 2017-today MuK IT GmbH.
 *
@@ -39,12 +39,10 @@
 *    DEALINGS IN THE SOFTWARE.
 *
 **********************************************************************************/
-
-.o_form_view {
-    &:not(.o_field_highlight) .o_field_widget:not(.o_field_invalid):not(.o_field_CopyClipboardChar) .o_input:not(:hover):not(:focus) {
-    	border-color: $gray-200 !important;
-    }
-	&:not(.o_field_highlight) .o_required_modifier.o_field_widget:not(.o_field_invalid):not(.o_field_CopyClipboardChar) .o_input:not(:hover):not(:focus) {
-		border-color: $gray-600 !important;
+	
+.mk_pager_refresh {
+	color: $gray-700;
+	&.mk_active_autoload{
+		color: $success;	
 	}
 }
