--- a/muk_web_theme/static/src/views/fields/many2one/many2one.scss
+++ b/muk_web_theme/static/src/views/fields/many2one/many2one.scss
@@ -40,11 +40,6 @@
 *
 **********************************************************************************/
 
-.o_form_view {
-    &:not(.o_field_highlight) .o_field_widget:not(.o_field_invalid):not(.o_field_CopyClipboardChar) .o_input:not(:hover):not(:focus) {
-    	border-color: $gray-200 !important;
-    }
-	&:not(.o_field_highlight) .o_required_modifier.o_field_widget:not(.o_field_invalid):not(.o_field_CopyClipboardChar) .o_input:not(:hover):not(:focus) {
-		border-color: $gray-600 !important;
-	}
+.o_field_widget.o_field_many2one .o_external_button {
+    color: $o-brand-primary;
 }
