--- a/muk_web_theme/static/src/views/fields/many2one/many2one.scss
+++ b/muk_web_theme/static/src/views/fields/many2one/many2one.scss
@@ -1,4 +1,4 @@
-**********************************************************************************
+/**********************************************************************************
 *
 *    Copyright (c) 2017-today MuK IT GmbH.
 *
