--- a/muk_web_theme/static/src/views/form/form.scss
+++ b/muk_web_theme/static/src/views/form/form.scss
@@ -1,4 +1,4 @@
-**********************************************************************************
+/**********************************************************************************
 *
 *    Copyright (c) 2017-today MuK IT GmbH.
 *
