publish muk_web_theme 16.0.1.0.7

--- a/muk_web_theme/static/src/webclient/appsbar/appsbar.scss
+++ b/muk_web_theme/static/src/webclient/appsbar/appsbar.scss
@@ -79,6 +79,9 @@
 					}
 		        }
 		    }
+	        > li.active > a {
+			    background: $o-brand-primary;
+	        }
 	        > li:hover > a {
 			    background: $o-brand-primary;
 	        }
